learning/istio/bookinfo/reviews-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  gateways:
  - bookinfo-gateway
  http:
    # - match:
    #     - headers:
    #         end-user:
    #           exact: jason
    #   route:
    #     - destination:
    #         host: reviews
    #         subset: v3
    # - match:
    #     - headers:
    #         end-user:
    #           exact: abc
    #   route:
    #     - destination:
    #         host: reviews
    #         subset: v2
    - route:
        - destination:
            host: reviews
            subset: v3
